Bug 164529 - Impress: Comment Text Box Does Not Automatically Open or Gain Focus
Summary: Impress: Comment Text Box Does Not Automatically Open or Gain Focus
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2024-12-31 12:00 UTC by Ezinne
Modified: 2025-11-04 16:58 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Comment in focus immediately after Insert (49.26 KB, image/png)
2024-12-31 12:00 UTC, Ezinne
Details
Comment box not in focus immediately after inserting (43.64 KB, image/png)
2024-12-31 12:02 UTC, Ezinne
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ezinne 2024-12-31 12:00:42 UTC
Created attachment 198337 [details]
Comment in focus immediately after Insert

When adding comments to slides in Impress, the comment text box does not automatically open or gain focus. This issue disrupts the user workflow, as users must manually click on the comment box to edit or input text. 

The expected behaviour is for the comment text box to open and be ready for typing immediately after adding a comment.

Steps:
1. Open LibreOffice Impress and create or open a presentation.
2. Select a slide and insert a comment (via Insert > Comment or shortcut).

Observe that the comment text box does not automatically open or gain focus for editing.

Actual Result: The comment text box remains inactive, requiring the user to manually click it to begin typing.

Expected Result: The comment text box should open automatically and gain focus, allowing immediate text input after adding the comment

OK in:
Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded



NOK in:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f24bb80e45c1693db33b47ee695436b2c8d5fbcd
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Ezinne 2024-12-31 12:02:40 UTC
Created attachment 198338 [details]
Comment box not in focus immediately after inserting

The user needs to click into the comment box to gain focus and type
Comment 2 m_a_riosv 2025-01-01 00:35:18 UTC
I can't reproduce
Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 BogdanB 2025-01-02 20:16:08 UTC
Confirm with
Version: 25.2.0.1 (X86_64) / LibreOffice Community
Build ID: ddb2a7ea3a8857aae619555f1a8743e430e146c9
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Also with
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 61f8fb648ecf9a20ee8abec0e8d3fad3e666db5e
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: x11
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Also with
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 61f8fb648ecf9a20ee8abec0e8d3fad3e666db5e
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Not in
Version: 7.2.3.2 / LibreOffice Community
Build ID: d166454616c1632304285822f9c83ce2e660fd92
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 BogdanB 2025-01-02 20:23:48 UTC
Tomaz, please can you take a look?

Author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2024-06-06 10:52:35 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	2024-06-11 12:48:48 +0200
commit e17c56bfc7930d3c14c3ff4cfd59828e8dcc0229 (patch)
tree ec27fbffbe482aea2e90e98a7dd269092d43fdf1
parent 4c179c1e62778274e7604b3317300f6df809cd80 (diff)
annot: new Annotation sdr object, replacing annotation tags
Previously the annotations are shown as annotation (smart) tags,
which just mark in the document the existence of an annotation at
a certain position. For PDF support the annotations can be more
complex, so they can show many forms of vector graphic, ink,
bitmaps, text boxes,... and for this a normal tag is not enough.

This change moves the annotations from simple tag to use the sdr
objects, so any SdrObject can be created as an annotation. The
previous tag annotations are using SdrObject (actually SdrRect)
subclass AnnotationObject and the code that previouslly worked
with the tag annotations has been adapted.

The (PDFium based) PDF import has been changed to use subclasses
of the SdrObjects for the PDF annotations.

Change-Id: I4746b85b5b679499e470987e61ed356397e56bf9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168485
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Comment 5 BogdanB 2025-01-03 06:55:30 UTC
Tomaz, you activated annotation again in https://gerrit.libreoffice.org/c/core/+/168514 (annot: make annotation pop-up window working again), but maybe not for initial case where we insert a comment.
Comment 6 Commit Notification 2025-01-07 04:45:08 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d3afb7acebc023340aef5d70d4f35cecb359cd54

tdf#164529 support annotation selection with edit (trigger pop-up)

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2025-01-07 11:12:15 UTC
Verified, thanks.

Arch Linux 64-bit
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 410653b9f654a0a265fffbb79c0bac0205b52278
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 7 January 2025
Comment 8 Commit Notification 2025-01-07 11:13:05 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/7485d2378cf8c680ddaace23565df3500c6b99a0

tdf#164529 support annotation selection with edit (trigger pop-up)

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Hole IO Online 2025-03-05 07:42:09 UTC Comment hidden (spam)