tdf#164529 support annotation selection with edit (trigger pop-up)

In some instances we want to select the annotation and edit them
at the same time - trigger pop-up. This change adds back support
for that.

Also properly close the pop-ups when the view shell and window
are destroyed.

Change-Id: I17abeb39a7500001b148b8923eb9028d297a40a3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179664
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179870
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>