sd/source/core/sdpage2.cxx
@@ -603,9 +603,7 @@ void SdPage::removeAnnotationNoNotify(rtl::Reference<sdr::annotation::Annotation
         SdrObject* pObject = GetObj(nObjectIndex);
         if (pObject->isAnnotationObject() && pObject->getAnnotationData()->mxAnnotation == xAnnotation)
         {
-            auto& pAnnotationPopup = pObject->getAnnotationData()->mpAnnotationPopup;
-            if (pAnnotationPopup)
-                pAnnotationPopup->closePopup();
+            pObject->getAnnotationData()->closePopup();
             RemoveObject(nObjectIndex);
         }
     }
